gobmkida/c2/approxlib
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/engine/board.c:2235:25: error: use of undeclared identifier 'dword_A7D19C'
if ( byte_9B389F[v8] || dword_A7D19C[v8] == v9 ) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/engine/board.c:2235:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v8] || dword_A7D19C[v8] == v9 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/engine/board.c:2237:24: error: use of undeclared identifier 'byte_9B389F'
if ( ( unsigned __int8)byte_9B389F[v8] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/engine/board.c:2265:1: error: use of undeclared identifier 'dword_A7D19C'
dword_A7D19C[v8] = v9; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/engine/board.c:2267:6: error: use of undeclared identifier 'byte_9B388C'
if ( byte_9B388C[v8] || string_number[v8 + 384] == v9 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/engine/board.c:2269:24: error: use of undeclared identifier 'byte_9B388C'
if ( ( unsigned __int8)byte_9B388C[v8] == color ) 
                       ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/approxlib/src/obj/1/board.o] Error 1
